Fix truncated Ä points

--- a/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/motions/modules/motion-block-slide/components/motion-block-slide/motion-block-slide.component.scss
+++ b/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/motions/modules/motion-block-slide/components/motion-block-slide/motion-block-slide.component.scss
@@ -1,5 +1,5 @@
 table {
-    line-height: 1;
+    line-height: 1.2;
     width: 100%;
     table-layout: fixed;
 }
